src/objects/E2_Action_Scope__c.object
<CustomObject>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <referenceTo>E2_Answer__c</referenceTo>
        <relationshipLabel>Action Scopes</relationshipLabel>
        <relationshipName>Action_Scopes</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <label>Scope</label>
        <referenceTo>E2_Scope__c</referenceTo>
        <relationshipLabel>Action Scopes</relationshipLabel>
        <relationshipName>Action_Scopes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Unique_Key__c</fullName>
        <externalId>true</externalId>
        <label>Unique Key</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Action Scope</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AS-{000}</displayFormat>
        <label>Action Scope Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Action Scopes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>